--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 
 <div class="container">
@@ -23,9 +23,12 @@
                 <div class="caption">
                     <h4><%= campground.name %></h4>
                 </div>
+                <p>
+                    <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
+                </p>
             </div>
         <% }); %>
     </div>
 </div>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
